--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,23 +6,39 @@
   "scripts": {
     "dev": "vite --port 3001 --host",
     "build": "tsc && vite build",
+    "watch:postcss-config": "onchange 'postcss.config.cjs' -- npm run restart-server",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@hail2u/css-mqpacker": "github:hail2u/node-css-mqpacker",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.30",
+    "postcss-font-magician": "^3.0.0",
+    "postcss-mixins": "^9.0.4",
+    "postcss-nested": "^6.0.1",
+    "postcss-position": "^1.1.0",
+    "postcss-responsive-type": "^1.0.0",
+    "postcss-short": "^5.0.0",
+    "postcss-short-text": "^1.1.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
