--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.2",
+    "js-cookie": "^3.0.5",
     "postcss-inherit": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.16.0"
   },
   "devDependencies": {
     "@hail2u/css-mqpacker": "github:hail2u/node-css-mqpacker",
@@ -40,6 +42,7 @@
     "postcss-responsive-type": "^1.0.0",
     "postcss-short": "^5.0.0",
     "postcss-short-text": "^1.1.0",
+    "react-router-dom": "^6.16.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
