frontend container is fixed for react app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,34 +12,34 @@ services:
   #   networks:
   #     - ft_transcendence_network
 
-# # Posgtres Microservice
-#   postgres:
-#     image: postgres:latest
-#     container_name: postgres
-#     user: postgres
-#     env_file:
-#       - ./backend/.env
-#     ports:
-#      - "5432:5432"
-#     volumes:
-#       - pg_data:/var/lib/postgresql/data
-#     networks:
-#       - ft_transcendence_network
+# Posgtres Microservice
+  postgres:
+    image: postgres:latest
+    container_name: postgres
+    user: postgres
+    env_file:
+      - ./backend/.env
+    ports:
+     - "5432:5432"
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+    networks:
+      - ft_transcendence_network
   
-# # Backend microService Depends on Postgres 
-#   backend:
-#     build:
-#       context: ./backend #/nestjs_hello
-#     container_name: backend
-#     env_file:
-#       - ./backend/.env
-#     ports:
-#       - "3000:3000"
-#       - "5555:5555"
-#     depends_on:
-#       - postgres
-#     networks:
-#       - ft_transcendence_network
+# Backend microService Depends on Postgres 
+  backend:
+    build:
+      context: ./backend #/nestjs_hello
+    container_name: backend
+    env_file:
+      - ./backend/.env
+    ports:
+      - "5000:3000"
+      - "5555:5555"
+    depends_on:
+      - postgres
+    networks:
+      - ft_transcendence_network
 
 # FrontEnd microService Depends on Backend
   frontend:
@@ -47,9 +47,9 @@ services:
       context: ./frontend
     container_name: frontend
     ports:
-      - "9090:3001"
-    # depends_on:
-    #   - backend  
+      - "3000:3000"
+    depends_on:
+       - backend  
     networks:
       - ft_transcendence_network
     volumes:
